--- a/Canvas/GameCanvas/index.html
+++ b/Canvas/GameCanvas/index.html
@@ -10,6 +10,21 @@
         padding: 0;
         margin: 0;
       }
+      .game-over-notify {
+        position: fixed;
+        display: none;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(255, 255, 255, 0.5);
+        align-items: center;
+        justify-content: center;
+        font-family: sans-serif;
+        font-size: 40px;
+        font-weight: bold;
+        color: red;
+      }
       canvas {
         background: #eee;
         display: block;
@@ -19,5 +34,6 @@
   </head>
   <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
+    <div class="game-over-notify">Game Over</div>
   </body>
 </html>
